--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pandas~=0.23.4
-keras~=2.3.1
-termcolor~=1.1.0
-six~=1.16.0
-tensorflow~=1.13.1
-numpy~=1.16.2
-matplotlib~=2.2.4
-scikit-learn~=0.24.2
+pandas==0.23.4
+keras==2.3.1
+termcolor==1.1.0
+six==1.16.0
+tensorflow==1.13.1
+numpy==1.16.2
+matplotlib==2.2.4
+scikit-learn==0.24.2
+h5py==2.10.0
+git+https://www.github.com/keras-team/keras-contrib.git
